Implement compennts for opening page.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jacknorquist/portfolio-app#readme",
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "dynamodb": "^1.3.0",
     "express": "^4.18.2"
   }
 }
